// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TestimonyCard with props correctly 1`] = `
<div
  className="card"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <img
        className="card-img-top"
        src="https://picsum.photos/300/200"
      />
    </div>
    <div
      className="align-self-center col"
    >
      <div
        className="card-body"
      >
        <p
          className="text-center card-text"
        >
          <div
            className="text-start"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-quote-left fa-w-16 fa-2x "
              color="#008080"
              data-icon="quote-left"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          To be or not to be?
          <div
            className="text-end"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-quote-right fa-w-16 fa-2x "
              color="#008080"
              data-icon="quote-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M464 32H336c-26.5 0-48 21.5-48 48v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48zm-288 0H48C21.5 32 0 53.5 0 80v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          <span
            style={
              Object {
                "direction": "ltr",
                "display": "inline-block",
              }
            }
          >
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={
                  Object {
                    "visibility": "hidden",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={
                  Object {
                    "visibility": "hidden",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={
                  Object {
                    "visibility": "hidden",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={Object {}}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "50%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={Object {}}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "0%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
          </span>
        </p>
      </div>
      <div
        className="card-body"
      >
        <div
          className="card"
        >
          <div
            className="card-body"
          >
            <div
              className="row"
            >
              <div
                className="align-self-center col-3"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-user-circle fa-w-16 fa-2x "
                  data-icon="user-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 496 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
              <div
                className="col"
              >
                <div
                  className="card-title h5"
                >
                  
                </div>
                <div
                  className="card-subtitle h6"
                >
                  
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders TestimonyCard without props correctly 1`] = `
<div
  className="card"
>
  <div
    className="row"
  >
    <div
      className="col"
    >
      <img
        className="card-img-top"
        src="https://picsum.photos/300/200"
      />
    </div>
    <div
      className="align-self-center col"
    >
      <div
        className="card-body"
      >
        <p
          className="text-center card-text"
        >
          <div
            className="text-start"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-quote-left fa-w-16 fa-2x "
              color="#008080"
              data-icon="quote-left"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M464 256h-80v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8c-88.4 0-160 71.6-160 160v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48zm-288 0H96v-64c0-35.3 28.7-64 64-64h8c13.3 0 24-10.7 24-24V56c0-13.3-10.7-24-24-24h-8C71.6 32 0 103.6 0 192v240c0 26.5 21.5 48 48 48h128c26.5 0 48-21.5 48-48V304c0-26.5-21.5-48-48-48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          
          <div
            className="text-end"
          >
            <svg
              aria-hidden="true"
              className="svg-inline--fa fa-quote-right fa-w-16 fa-2x "
              color="#008080"
              data-icon="quote-right"
              data-prefix="fas"
              focusable="false"
              role="img"
              style={Object {}}
              viewBox="0 0 512 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M464 32H336c-26.5 0-48 21.5-48 48v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48zm-288 0H48C21.5 32 0 53.5 0 80v128c0 26.5 21.5 48 48 48h80v64c0 35.3-28.7 64-64 64h-8c-13.3 0-24 10.7-24 24v48c0 13.3 10.7 24 24 24h8c88.4 0 160-71.6 160-160V80c0-26.5-21.5-48-48-48z"
                fill="currentColor"
                style={Object {}}
              />
            </svg>
          </div>
          <span
            style={
              Object {
                "direction": "ltr",
                "display": "inline-block",
              }
            }
          >
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={
                  Object {
                    "visibility": "hidden",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={
                  Object {
                    "visibility": "hidden",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={
                  Object {
                    "visibility": "hidden",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={
                  Object {
                    "visibility": "hidden",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "100%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
            <span
              onClick={[Function]}
              onMouseMove={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              style={
                Object {
                  "cursor": "inherit",
                  "display": "inline-block",
                  "position": "relative",
                }
              }
            >
              <span
                style={Object {}}
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="far"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528.1 171.5L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6zM388.6 312.3l23.7 138.4L288 385.4l-124.3 65.3 23.7-138.4-100.6-98 139-20.2 62.2-126 62.2 126 139 20.2-100.6 98z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
              <span
                style={
                  Object {
                    "display": "inline-block",
                    "left": 0,
                    "overflow": "hidden",
                    "position": "absolute",
                    "top": 0,
                    "width": "50%",
                  }
                }
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-star fa-w-18 "
                  data-icon="star"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </span>
            </span>
          </span>
        </p>
      </div>
      <div
        className="card-body"
      >
        <div
          className="card"
        >
          <div
            className="card-body"
          >
            <div
              className="row"
            >
              <div
                className="align-self-center col-3"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-user-circle fa-w-16 fa-2x "
                  data-icon="user-circle"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 496 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M248 8C111 8 0 119 0 256s111 248 248 248 248-111 248-248S385 8 248 8zm0 96c48.6 0 88 39.4 88 88s-39.4 88-88 88-88-39.4-88-88 39.4-88 88-88zm0 344c-58.7 0-111.3-26.6-146.5-68.2 18.8-35.4 55.6-59.8 98.5-59.8 2.4 0 4.8.4 7.1 1.1 13 4.2 26.6 6.9 40.9 6.9 14.3 0 28-2.7 40.9-6.9 2.3-.7 4.7-1.1 7.1-1.1 42.9 0 79.7 24.4 98.5 59.8C359.3 421.4 306.7 448 248 448z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
              </div>
              <div
                className="col"
              >
                <div
                  className="card-title h5"
                >
                  
                </div>
                <div
                  className="card-subtitle h6"
                >
                  
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
